# rtl-bot

./: .env.example  pyproject.toml  readme.md
src/: config.py  constants.py  enums.py  main.py
src/database/: client.py  funcs.py
src/utils/: time.py
